# ftl-meta-expert

./: CLAUDE.md  README.md  pyproject.toml
ftl_meta_expert/: __init__.py  belief_answer.py  cli.py  llm.py  topics.py
ftl_meta_expert/prompts/: __init__.py  ask.py  common.py  contradictions.py  derive.py  summary.py
