[project]
name = "ftl-meta-expert"
version = "0.2.0"
description = "Cross-domain expert aggregator — import, derive, and query across expert knowledge bases"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click>=8.0", "spacy>=3.7"]

[project.scripts]
meta-expert = "ftl_meta_expert.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ftl_meta_expert"]
